Fix issue with unwanted white space at the bottom of landing page.  Make the landing page reload once the user info is available after authentication.  Remove the Loading state screen to reduce issues with occasionally getting stuck on it

--- a/app/frontend/src/index.css
+++ b/app/frontend/src/index.css
@@ -22,5 +22,7 @@ html {
 }
 
 #root {
-    height: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
